removed events from ab us, fixed events details overlap

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -589,7 +589,6 @@ a.inline-link{
 .events_container {
   display: grid;
   align-items: center;
-  
   width: 100%;
   @media (min-width: 768px) {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -601,7 +600,9 @@ a.inline-link{
 
 .event_card_outer {
   max-width: 20rem;
-  max-height: 25rem;
+  max-height: 42rem;
+  margin-top: 0;
+  margin-bottom: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
